[gd_scene load_steps=7 format=3 uid="uid://cbsp8otdhuoty"]

[ext_resource type="PackedScene" uid="uid://bey6fhrbn55h0" path="res://node/actor.tscn" id="1_mic32"]
[ext_resource type="Script" path="res://node/party_actor.gd" id="2_0pyd1"]
[ext_resource type="Script" path="res://node/ui/vbox_slanted.gd" id="3_68da3"]
[ext_resource type="Script" path="res://node/ui/action_menu.gd" id="3_g0sg8"]
[ext_resource type="Material" uid="uid://cd13ivlfach8v" path="res://asset/shader/unshaded.tres" id="3_osft0"]
[ext_resource type="Texture2D" uid="uid://dfojp4r45l1b5" path="res://asset/gradient.png" id="4_ppnbo"]

[node name="PartyActor" instance=ExtResource("1_mic32")]
wall_min_slide_angle = 0.0
script = ExtResource("2_0pyd1")

[node name="Collision" parent="." index="0"]
disabled = true

[node name="CollisionChecker" type="RayCast2D" parent="." index="1"]
target_position = Vector2(16, 8)

[node name="InteractionArea" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Shape" type="CollisionPolygon2D" parent="InteractionArea" index="0"]
polygon = PackedVector2Array(-32, 0, 0, -16, 32, 0, 0, 16)

[node name="Path" type="Line2D" parent="DuringTurn" index="1"]
top_level = true
z_index = -1
material = ExtResource("3_osft0")
width = 3.0
texture = ExtResource("4_ppnbo")
texture_mode = 2

[node name="ActionMenu" type="TabContainer" parent="DuringTurn" index="2"]
visible = false
z_index = 1
offset_left = 15.0
offset_top = -46.0
offset_right = 55.0
offset_bottom = -6.0
tabs_visible = false
script = ExtResource("3_g0sg8")

[node name="TypeChooser" type="VBoxContainer" parent="DuringTurn/ActionMenu" index="1"]
layout_mode = 2
theme_override_constants/separation = 2
script = ExtResource("3_68da3")
offset = 6

[node name="Attack" type="Button" parent="DuringTurn/ActionMenu/TypeChooser" index="0"]
layout_mode = 2
text = "attack!"

[node name="Guard" type="Button" parent="DuringTurn/ActionMenu/TypeChooser" index="1"]
layout_mode = 2
text = "guard"

[node name="EndTurn" type="Button" parent="DuringTurn/ActionMenu/TypeChooser" index="2"]
layout_mode = 2
text = "end turn"

[node name="ActionList" type="ItemList" parent="DuringTurn/ActionMenu" index="2"]
visible = false
layout_mode = 2
allow_search = false
text_overrun_behavior = 0

[connection signal="hidden" from="DuringTurn/ActionMenu" to="DuringTurn/ActionMenu" method="set_current_tab" binds= [0]]
[connection signal="tab_changed" from="DuringTurn/ActionMenu" to="DuringTurn/ActionMenu" method="_on_tab_changed"]
[connection signal="visibility_changed" from="DuringTurn/ActionMenu" to="DuringTurn/ActionMenu" method="_on_visibility_changed"]
[connection signal="pressed" from="DuringTurn/ActionMenu/TypeChooser/Attack" to="DuringTurn/ActionMenu" method="set_current_tab" binds= [1]]
[connection signal="pressed" from="DuringTurn/ActionMenu/TypeChooser/Guard" to="DuringTurn/ActionMenu" method="_end_turn"]
[connection signal="pressed" from="DuringTurn/ActionMenu/TypeChooser/EndTurn" to="DuringTurn/ActionMenu" method="_end_turn"]
[connection signal="focus_entered" from="DuringTurn/ActionMenu/ActionList" to="DuringTurn/ActionMenu" method="_on_actionlist_item_selected" binds= [0]]
[connection signal="focus_entered" from="DuringTurn/ActionMenu/ActionList" to="DuringTurn/ActionMenu/ActionList" method="select" binds= [0]]
[connection signal="hidden" from="DuringTurn/ActionMenu/ActionList" to="DuringTurn/ActionMenu" method="free_splash"]
[connection signal="item_activated" from="DuringTurn/ActionMenu/ActionList" to="DuringTurn/ActionMenu" method="_on_actionlist_item_activated"]
[connection signal="item_selected" from="DuringTurn/ActionMenu/ActionList" to="DuringTurn/ActionMenu" method="_on_actionlist_item_selected"]
